# medical-share-pro

./: .replit  README.md  auth.py  database.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  schemas.py
attached_assets/: Pasted-1-Overall-Product-Vision-Goal-Give-caregivers-a-simple-secure-tool-to-upload-or-scan-medical-do-1742351331600.txt
client/src/: App.tsx
client/src/components/: appointment-form.tsx  document-search.tsx  document-upload.tsx  document-viewer.tsx  nav-bar.tsx  setup-2fa.tsx  share-document-dialog.tsx
client/src/pages/: auth-page.tsx  home-page.tsx  shared-document-page.tsx  timeline-page.tsx
docs/: OCR_TROUBLESHOOTING.md
server/: index.ts  routes.ts  storage.ts  totp.ts
shared/: schema.ts
